@@ -135,30 +135,36 @@ get_hints (shared_ptr<const Film> film)
 
 	boost::filesystem::path path = film->audio_analysis_path (film->playlist ());
 	if (boost::filesystem::exists (path)) {
-		shared_ptr<AudioAnalysis> an (new AudioAnalysis (path));
+		try {
+			shared_ptr<AudioAnalysis> an (new AudioAnalysis (path));
 
-		string ch;
+			string ch;
 
-		vector<AudioAnalysis::PeakTime> sample_peak = an->sample_peak ();
-		vector<float> true_peak = an->true_peak ();
+			vector<AudioAnalysis::PeakTime> sample_peak = an->sample_peak ();
+			vector<float> true_peak = an->true_peak ();
 
-		for (size_t i = 0; i < sample_peak.size(); ++i) {
-			float const peak = max (sample_peak[i].peak, true_peak.empty() ? 0 : true_peak[i]);
-			float const peak_dB = 20 * log10 (peak) + an->gain_correction (film->playlist ());
-			if (peak_dB > -3) {
-				ch += dcp::raw_convert<string> (short_audio_channel_name (i)) + ", ";
+			for (size_t i = 0; i < sample_peak.size(); ++i) {
+				float const peak = max (sample_peak[i].peak, true_peak.empty() ? 0 : true_peak[i]);
+				float const peak_dB = 20 * log10 (peak) + an->gain_correction (film->playlist ());
+				if (peak_dB > -3) {
+					ch += dcp::raw_convert<string> (short_audio_channel_name (i)) + ", ";
+				}
 			}
-		}
 
-		ch = ch.substr (0, ch.length() - 2);
+			ch = ch.substr (0, ch.length() - 2);
 
-		if (!ch.empty ()) {
-			hints.push_back (
-				String::compose (
-					_("Your audio level is very high (on %1).  You should reduce the gain of your audio content."),
-					ch
-					)
-				);
+			if (!ch.empty ()) {
+				hints.push_back (
+					String::compose (
+						_("Your audio level is very high (on %1).  You should reduce the gain of your audio content."),
+						ch
+						)
+					);
+			}
+		} catch (OldFormatError& e) {
+			/* The audio analysis is too old to load in; just skip this hint as if
+			   it had never been run.
+			*/
 		}
 	}
 
